Fixed layout and wrapping for mobile.

--- a/static/site.css
+++ b/static/site.css
@@ -5,18 +5,46 @@ html {
 }
 
 body {
-        max-width: calc(75.2em + 1px);
+        background-color: #f4f4f4;
+}
+
+pre {
+        /* display: block; */
+        padding: 1em;
+        border-radius: 10px;
+        white-space:pre-wrap;
+}
+
+#wrapper {
+        max-width: calc(76em + 1px);
         margin-top: 2em;
-        margin-left: 8em;
+        margin-left: 4em;
         /* padding: 0; */
         /* margin: 0 auto; */
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
 }
-
+ 
 #navbar-header {
-        flex: 0;
+        flex: 0 1 16em;
 }
 
-#navbar {
-        width: 20em;
+#custom-content {
+        flex: 1 1;
 }
+
+/*
+#navbar {
+}
+*/
+
+#navbar a:link, #navbar a:visited {
+    color: blue;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
